# traveling-ethiopia-robot

./: LICENSE  README.md  package.xml
launch/: launch_robot.launch.py
libs/: city_file_reader.py  city_graph.py  city_search.py  move_robot.py  nav_move.py  path_listener.py  path_publisher.py  robot_controller.py  user_input.py
models/Three_wheeled_robot/: model.config  model.sdf
models/two_wheeled_robot_description/: model.config  model.sdf
msg/: Goal.msg
scripts/: move_robot_node.py  nav_move_node.py  path_listener_node.py  path_publisher_node.py  py_node.py
state/: ethiopia.txt
worlds/: ethiopia.world
